welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
 def move(int nbPas,boolean versLAvant){
	for(n<-1 to nbPas){
		if(versLAvant==true){
			avance();
			return
		}else{
			recule();
			return
		}
	}
}
